src/test/deca/context/invalid/objets/09SiblingCast.deca
class A {
    int x;
}

class X extends A {
    int b;
}

class Y extends A {
    int c;
}

{
    A a = new X();
    println(((Y) (a)));
}
